feat: add backup orders bash script

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,10 @@
 .classpath
 .project
 .settings
+
+##############################
+## Backup files
+##############################
+*~.nib
+*.tar.gz
+*.swp
